# school_diary

./: .gitignore  LICENSE  README.md  alembic.ini  crud.py  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  seed.py  sqlalchemy_example.db  test.db
migrations/: env.py
migrations/versions/: 0193981d4bb8_add_dob_fname_lname.py  15185e001e94_add_dob_fname_lname.py  1e4c75618db0_add_dob_fname_lname.py  2024_11_16_1841-28d28adc62a1_init.py  2024_11_16_1855-05bdc3f4f22e_add_contacts.py  2024_11_20_1651-524446dabc38_.py  2024_11_21_2022-9952e4975a20_add_user.py  2024_11_22_1401-1854938cdcad_user_table_fix.py  2024_11_22_1407-a21a2621f91e_user_table_add_roles.py  2024_11_22_1449-bcb9eecc1a1a_user_table_add_roles.py  2024_11_26_0924-b65ed992943c_add_persontype.py  2024_11_27_0918-b5df67bb1d54_email_confirmation.py  2024_12_02_1950-72aa6de6989c_contacts_fix.py  2024_12_02_1952-ff1b6d03d33f_contacts_fix.py  2024_12_02_1955-7d5dfa3b1d88_contacts_fix.py  2024_12_02_2002-b864dccfebce_contacts_fix.py  2dd3bc165846_initial.py  509629b84bfe_initial.py  94bb90b3023d_initial.py  f9e9c8525920_add_dob_fname_lname.py
src/: auth.py  roles.py  schemas.py
src/conf/: config_example.ini
src/database/: db.py  models.py
src/routes/: auth.py  (+7 more)
static/: main.js  style.css
templates/: base.html  disciplines.html  grades.html  groups.html  index.html  student.html  students.html  students_with_grades.html  teacher.html  teachers.html  top_10_students.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_groups.py  test_unit_repository_students.py
(+17 files in other folders)
