[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Vitaliy Lobko <vitaliy.lobko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = { extras = ["standart"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
faker = ">30.8.2"
pydantic = { extras = ["email"], version = "^2.9.2" }
psycopg2 = "^2.9.10"
jinja2 = "^3.1.4"
pathlib = {extras = ["bcrypt"], version = "^1.0.1"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.17"
bcrypt = "^4.2.1"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.2"
email-validator = "^2.2.0"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
